[package]
name = "lyon_geom"
version = "0.14.0"
description = "2D quadratic and cubic bézier arcs and line segment math on top of euclid."
authors = ["Nicolas Silva <nical@fastmail.com>"]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_geom/"
keywords = ["2d", "graphics", "bezier", "geometry"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_geom"

[features]
default = ["std"]
std = ["num-traits/std"]
serialization = ["serde", "euclid/serde"]

[dependencies]
# euclid = "0.20.0"
euclid = { git = "https://github.com/CryZe/euclid", branch = "actual-no-std" }
arrayvec = { version = "0.4", default-features = false }
num-traits = { git = "https://github.com/yoanlcq/num-traits", branch = "libm_no_std", default-features = false, features = ["libm"] }
serde = {version = "1.0", optional = true, features = ["serde_derive"] }
libm = "0.1.4"
