[package]
name = "lyon_path"
version = "0.14.0"
description = "Types and utilities to store, build and iterate over 2D paths."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_path/"
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_path"

[features]
default = ["std"]
std = ["lyon_geom/std"]
serialization = ["serde", "lyon_geom/serialization"]

[dependencies]
lyon_geom = { version = "0.14.0", path = "../geom", default-features = false }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
