[package]

name = "lyon_tessellation"
version = "0.14.1"
description = "A low level path tessellation library."
authors = [ "Nicolas Silva <nical@fastmail.com>" ]
repository = "https://github.com/nical/lyon"
documentation = "https://docs.rs/lyon_tessellation/"
keywords = ["2d", "graphics", "tessellation", "svg"]
license = "MIT/Apache-2.0"
workspace = ".."
edition = "2018"

[lib]
name = "lyon_tessellation"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["lyon_path/std", "num-traits/std"]
serialization = ["serde", "lyon_path/serialization"]
debugger = []

[dependencies]

lyon_path = { version = "0.14.0", path = "../path", default-features = false }
sid = { git = "https://github.com/CryZe/sid", branch = "no-std", default-features = false }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
libm = "0.1.4"
num-traits = { git = "https://github.com/yoanlcq/num-traits", branch = "libm_no_std", default-features = false, features = ["libm"] }

[dev-dependencies]
# lyon_extra = { version = "0.14.0", path = "../extra" }
